# MF-stokes

./: CMakeLists.txt  MF-stokes.pc.in  config.h.cmake  dune.module
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/MF-stokes/: CMakeLists.txt  MF-stokes.hh
src/: CMakeLists.txt  MF-stokes.cc  bc_extension.hh  driver.hh  prepreka1.msh
